TM-16108 - fix main-header overlapping wrapper-container element TM-16108 - fix broken gojs diagram ui elements due to merge with clarity implementations on dev/5.0.0

--- a/src/main/webapp/tds/web-app/css/shared/components/diagram-layout.component.scss
+++ b/src/main/webapp/tds/web-app/css/shared/components/diagram-layout.component.scss
@@ -12,12 +12,14 @@
 
 .overview-container {
   position: absolute;
-  width: 200px;
-  height: 100px;
-  bottom: 20px;
-  right: 15px;
+  width: 20%;
+  max-width: 250px;
+  height: 20%;
+  max-height: 150px;
+  top: 10px;
+  left: 20px;
   background-color: aliceblue;
-  z-index: 300; /* make sure its in front */
+  z-index: 71; /* make sure its in front */
   border: solid 1px blue;
 }
 
@@ -33,7 +35,26 @@
 }
 
 #graph-control-btn-group > .btn {
-  background-color: #dddddd;
+  background-color: #dddddd !important;
+  border-color: #c4d0dc !important;
+  color: #333333 !important;
+  width: 100% !important;
+  padding: 0 .2rem 0 .2rem !important;
+  min-width: 1.5rem !important;
+  border-radius: 0.3rem !important;
+  margin: 0 0 0.05rem 0 !important;
+}
+
+#graph-control-btn-group > .btn:hover {
+  box-shadow: 0 2rem 0 0 #c4d0dc inset !important;
+}
+
+#graph-control-btn-group > .btn:active {
+  box-shadow: 0 2rem 0 0 #c4d0dc inset !important;
+}
+
+#graph-control-btn-group > .btn:focus {
+  outline: none !important;
 }
 
 .diagram-card {
